--- a/upload/admin/view/template/catalog/option_form.twig
+++ b/upload/admin/view/template/catalog/option_form.twig
@@ -70,7 +70,7 @@
               </div>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset id="display-option-value">
             <legend>{{ text_value }}</legend>
             <table id="option-value" class="table table-bordered table-hover">
               <thead>
@@ -95,13 +95,13 @@
                       {% endfor %}</td>
                     <td class="text-center">
                       <div class="border rounded d-block" style="max-width: 300px;">
-                        <img src="{{ option_value.thumb }}" alt="" title="" id="thumb-image-{{ option_value_row }}" data-oc-placeholder="{{ placeholder }}" class="img-fluid"/>
-                        <input type="hidden" name="option_value[{{ option_value_row }}][image]" value="{{ option_value.image }}" id="input-image-{{ option_value_row }}"/>
+                        <img src="{{ option_value.thumb }}" alt="" title="" id="thumb-image-{{ option_value_row }}" data-oc-placeholder="{{ placeholder }}" class="img-fluid"/> <input type="hidden" name="option_value[{{ option_value_row }}][image]" value="{{ option_value.image }}" id="input-image-{{ option_value_row }}"/>
                         <div class="d-grid">
                           <button type="button" data-oc-toggle="image" data-oc-target="#input-image-{{ option_value_row }}" data-oc-thumb="#thumb-image-{{ option_value_row }}" class="btn btn-primary rounded-0"><i class="fa-solid fa-pencil"></i> {{ button_edit }}</button>
                           <button type="button" data-oc-toggle="clear" data-oc-target="#input-image-{{ option_value_row }}" data-oc-thumb="#thumb-image-{{ option_value_row }}" class="btn btn-warning rounded-0"><i class="fa-regular fa-trash-can"></i> {{ button_clear }}</button>
                         </div>
-                      </div></td>
+                      </div>
+                    </td>
                     <td class="text-end"><input type="text" name="option_value[{{ option_value_row }}][sort_order]" value="{{ option_value.sort_order }}" placeholder="{{ entry_sort_order }}" class="form-control"/></td>
                     <td class="text-end"><button type="button" onclick="$('#option-value-row-{{ option_value_row }}').remove();" data-bs-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button></td>
                   </tr>
@@ -111,7 +111,7 @@
               <tfoot>
                 <tr>
                   <td colspan="3"></td>
-                  <td class="text-end"><button type="button" onclick="addOptionValue();" data-bs-toggle="tooltip" title="{{ button_option_value_add }}" class="btn btn-primary"><i class="fa-solid fa-plus-circle"></i></button></td>
+                  <td class="text-end"><button type="button" id="button-option-value" data-bs-toggle="tooltip" title="{{ button_option_value_add }}" class="btn btn-primary"><i class="fa-solid fa-plus-circle"></i></button></td>
                 </tr>
               </tfoot>
             </table>
@@ -122,52 +122,30 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#input-type').on('change', function() {
-    if (this.value == 'select' || this.value == 'radio' || this.value == 'checkbox' || this.value == 'image') {
-        $('#option-value').parent().show();
-    } else {
-        $('#option-value').parent().hide();
-    }
-
-    if (this.value == 'text' || this.value == 'textarea') {
-        $('#display-validation').show();
-    } else {
-        $('#display-validation').hide();
-        $('#input-validation').val('');
-    }
-});
-
-$('#input-type').trigger('change');
-
-var option_value_row = {{ option_value_row }};
-
-function addOptionValue() {
-    html = '<tr id="option-value-row-' + option_value_row + '">';
-    html += '  <td><input type="hidden" name="option_value[' + option_value_row + '][option_value_id]" value="" />';
-  {% for language in languages %}
-    html += '    <div class="input-group">';
-    html += '      <div class="input-group-text"><img src="{{ language.image|escape('js') }}" title="{{ language.name|escape('js') }}" /></div>';
-    html += '      <input type="text" name="option_value[' + option_value_row + '][option_value_description][{{ language.language_id }}][name]" value="" placeholder="{{ entry_option_value|escape('js') }}" id="input-option-value-' + option_value_row + '-{{ language.language_id }}" class="form-control"/>';
-    html += '    </div>';
-    html += '    <div id="error-option-value-' + option_value_row + '-{{ language.language_id }}" class="invalid-feedback"></div>';
-  {% endfor %}
-    html += '  </td>';
-    html += '  <td class="text-center"><div class="border rounded d-block" style="max-width: 300px;">';
-    html += '    <img src="{{ placeholder|escape('js') }}" alt="" title="" id="thumb-image-' + option_value_row + '" data-oc-placeholder="{{ placeholder|escape('js') }}" class="img-fluid"/>';
-    html += '    <input type="hidden" name="option_value[' + option_value_row + '][image]" value="" id="input-image-' + option_value_row + '"/>';
-    html += '    <div class="d-grid">';
-    html += '      <button type="button" data-oc-toggle="image" data-oc-target="#input-image-' + option_value_row + '" data-oc-thumb="#thumb-image-' + option_value_row + '" class="btn btn-primary rounded-0"><i class="fa-solid fa-pencil"></i> {{ button_edit|escape('js') }}</button>';
-    html += '      <button type="button" data-oc-toggle="clear" data-oc-target="#input-image-' + option_value_row + '" data-oc-thumb="#thumb-image-' + option_value_row + '" class="btn btn-warning rounded-0"><i class="fa-regular fa-trash-can"></i> {{ button_clear|escape('js') }}</button>';
-    html += '    </div>';
-    html += '  </div></td>';
-    html += '  <td class="text-end"><input type="text" name="option_value[' + option_value_row + '][sort_order]" value="" placeholder="{{ entry_sort_order|escape('js') }}" class="form-control"/></td>';
-    html += '  <td class="text-end"><button type="button" onclick="$(\'#option-value-row-' + option_value_row + '\').remove();" data-bs-toggle="tooltip" title="{{ button_remove|escape('js') }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button></td>';
-    html += '</tr>';
-
-    $('#option-value tbody').append(html);
-
-    option_value_row++;
-}
-//--></script>
+<template id="template-option-value">
+  <tr id="option-value-row-{{ option_value_row }}">
+    <td><input type="hidden" name="option_value[{{ option_value_row }}][option_value_id]" value=""/>
+      {% for language in languages %}
+        <div class="input-group">
+          <div class="input-group-text"><img src="{{ language.image }}" title="{{ language.name }}"/></div>
+          <input type="text" name="option_value[{{ option_value_row }}][option_value_description][{{ language.language_id }}][name]" value="" placeholder="{{ entry_option_value }}" id="input-option-value-{{ option_value_row }}-{{ language.language_id }}" class="form-control"/>
+        </div>
+        <div id="error-option-value-{{ option_value_row }}-{{ language.language_id }}" class="invalid-feedback"></div>
+      {% endfor %}
+    </td>
+    <td class="text-center">
+      <div class="border rounded d-block" style="max-width: 300px;">
+        <img src="{{ placeholder }}" alt="" title="" id="thumb-image-{{ option_value_row }}" data-oc-placeholder="{{ placeholder }}" class="img-fluid"/>
+        <input type="hidden" name="option_value[{{ option_value_row }}][image]" value="" id="input-image-{{ option_value_row }}"/>
+        <div class="d-grid">
+          <button type="button" data-oc-toggle="image" data-oc-target="#input-image-{{ option_value_row }}" data-oc-thumb="#thumb-image-{{ option_value_row }}" class="btn btn-primary rounded-0"><i class="fa-solid fa-pencil"></i> {{ button_edit }}</button>
+          <button type="button" data-oc-toggle="clear" data-oc-target="#input-image-{{ option_value_row }}" data-oc-thumb="#thumb-image-{{ option_value_row }}" class="btn btn-warning rounded-0"><i class="fa-regular fa-trash-can"></i> {{ button_clear }}</button>
+        </div>
+      </div>
+    </td>
+    <td class="text-end"><input type="text" name="option_value[{{ option_value_row }}][sort_order]" value="" placeholder="{{ entry_sort_order }}" class="form-control"/></td>
+    <td class="text-end"><button type="button" onclick="$('#option-value-row-{{ option_value_row }}').remove();" data-bs-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button></td>
+  </tr>
+</template>
+<script type="text/javascript" src="view/javascript/option.js"></script>
 {{ footer }}
