--- a/upload/admin/view/template/common/footer.twig
+++ b/upload/admin/view/template/common/footer.twig
@@ -3,4 +3,5 @@
   <script type="text/javascript" src="{{ script.href }}"></script>
 {% endfor %}
 <script type="module" src="../assets/webcomponent/webcomponent.js"></script>
-</body></html>
+</body>
+</html>
