--- a/upload/admin/view/template/catalog/attribute_list.twig
+++ b/upload/admin/view/template/catalog/attribute_list.twig
@@ -4,9 +4,9 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'ad.name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
+          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
           <th><a href="{{ sort_attribute_group }}"{% if sort == 'attribute_group' %} class="{{ order|lower }}"{% endif %}>{{ column_attribute_group }}</a></th>
-          <th class="text-end"><a href="{{ sort_sort_order }}"{% if sort == 'a.sort_order' %} class="{{ order|lower }}"{% endif %}>{{ column_sort_order }}</a></th>
+          <th class="text-end"><a href="{{ sort_sort_order }}"{% if sort == 'sort_order' %} class="{{ order|lower }}"{% endif %}>{{ column_sort_order }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
