--- a/upload/admin/view/template/catalog/review_list.twig
+++ b/upload/admin/view/template/catalog/review_list.twig
@@ -4,11 +4,11 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_product }}"{% if sort == 'pd.name' %} class="{{ order|lower }}"{% endif %}>{{ column_product }}</a></th>
-          <th><a href="{{ sort_author }}"{% if sort == 'r.author' %} class="{{ order|lower }}"{% endif %}>{{ column_author }}</a></th>
-          <th class="text-end d-none d-lg-table-cell"><a href="{{ sort_rating }}"{% if sort == 'r.rating' %} class="{{ order|lower }}"{% endif %}>{{ column_rating }}</a></th>
-          <th><a href="{{ sort_date_added }}"{% if sort == 'r.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
-          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'r.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
+          <th><a href="{{ sort_product }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_product }}</a></th>
+          <th><a href="{{ sort_author }}"{% if sort == 'author' %} class="{{ order|lower }}"{% endif %}>{{ column_author }}</a></th>
+          <th class="text-end d-none d-lg-table-cell"><a href="{{ sort_rating }}"{% if sort == 'rating' %} class="{{ order|lower }}"{% endif %}>{{ column_rating }}</a></th>
+          <th><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
