--- a/upload/admin/view/template/cms/article_list.twig
+++ b/upload/admin/view/template/cms/article_list.twig
@@ -4,11 +4,11 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'ad.name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th><a href="{{ sort_author }}"{% if sort == 'a.author' %} class="{{ order|lower }}"{% endif %}>{{ column_author }}</a></th>
-          <th class="text-end"><a href="{{ sort_rating }}"{% if sort == 'a.rating' %} class="{{ order|lower }}"{% endif %}>{{ column_rating }}</a></th>
-          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'a.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="text-end"><a href="{{ sort_date_added }}"{% if sort == 'a.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
+          <th><a href="{{ sort_author }}"{% if sort == 'author' %} class="{{ order|lower }}"{% endif %}>{{ column_author }}</a></th>
+          <th class="text-end"><a href="{{ sort_rating }}"{% if sort == 'rating' %} class="{{ order|lower }}"{% endif %}>{{ column_rating }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
+          <th class="text-end"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
