--- a/upload/admin/view/template/sale/order_list.twig
+++ b/upload/admin/view/template/sale/order_list.twig
@@ -4,13 +4,13 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').trigger('click');" class="form-check-input"/></th>
-          <th class="text-end"><a href="{{ sort_order }}"{% if sort == 'o.order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
-          <th><a href="{{ sort_store_name }}"{% if sort == 'o.store_name' %} class="{{ order|lower }}"{% endif %}>{{ column_store }}</a></th>
+          <th class="text-end"><a href="{{ sort_order }}"{% if sort == 'order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
+          <th><a href="{{ sort_store_name }}"{% if sort == 'store' %} class="{{ order|lower }}"{% endif %}>{{ column_store }}</a></th>
           <th><a href="{{ sort_customer }}"{% if sort == 'customer' %} class="{{ order|lower }}"{% endif %}>{{ column_customer }}</a></th>
           <th><a href="{{ sort_status }}"{% if sort == 'order_status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="text-end d-none d-lg-table-cell"><a href="{{ sort_total }}"{% if sort == 'o.total' %} class="{{ order|lower }}"{% endif %}>{{ column_total }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'o.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
-          <th class="d-none d-xl-table-cell"><a href="{{ sort_date_modified }}"{% if sort == 'o.date_modified' %} class="{{ order|lower }}"{% endif %}>{{ column_date_modified }}</a></th>
+          <th class="text-end d-none d-lg-table-cell"><a href="{{ sort_total }}"{% if sort == 'total' %} class="{{ order|lower }}"{% endif %}>{{ column_total }}</a></th>
+          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th class="d-none d-xl-table-cell"><a href="{{ sort_date_modified }}"{% if sort == 'date_modified' %} class="{{ order|lower }}"{% endif %}>{{ column_date_modified }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
