--- a/upload/admin/view/template/sale/returns_list.twig
+++ b/upload/admin/view/template/sale/returns_list.twig
@@ -4,13 +4,13 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th class="text-end"><a href="{{ sort_return_id }}"{% if sort == 'r.return_id' %} class="{{ order|lower }}"{% endif %}>{{ column_return_id }}</a></th>
-          <th class="text-end"><a href="{{ sort_order_id }}"{% if sort == 'r.order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
+          <th class="text-end"><a href="{{ sort_return_id }}"{% if sort == 'return_id' %} class="{{ order|lower }}"{% endif %}>{{ column_return_id }}</a></th>
+          <th class="text-end"><a href="{{ sort_order_id }}"{% if sort == 'order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
           <th><a href="{{ sort_customer }}"{% if sort == 'customer' %} class="{{ order|lower }}"{% endif %}>{{ column_customer }}</a></th>
-          <th><a href="{{ sort_product }}"{% if sort == 'r.product' %} class="{{ order|lower }}"{% endif %}>{{ column_product }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_model }}"{% if sort == 'r.model' %} class="{{ order|lower }}"{% endif %}>{{ column_model }}</a></th>
+          <th><a href="{{ sort_product }}"{% if sort == 'product' %} class="{{ order|lower }}"{% endif %}>{{ column_product }}</a></th>
+          <th class="d-none d-lg-table-cell"><a href="{{ sort_model }}"{% if sort == 'model' %} class="{{ order|lower }}"{% endif %}>{{ column_model }}</a></th>
           <th><a href="{{ sort_status }}"{% if sort == 'return_status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'r.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
