--- a/upload/admin/view/template/sale/subscription_list.twig
+++ b/upload/admin/view/template/sale/subscription_list.twig
@@ -4,11 +4,11 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').trigger('click');" class="form-check-input"/></th>
-          <th class="text-end"><a href="{{ sort_subscription }}"{% if sort == 's.subscription_id' %} class="{{ order|lower }}"{% endif %}>{{ column_subscription_id }}</a></th>
-          <th class="text-end"><a href="{{ sort_order }}"{% if sort == 's.order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
+          <th class="text-end"><a href="{{ sort_subscription }}"{% if sort == 'subscription_id' %} class="{{ order|lower }}"{% endif %}>{{ column_subscription_id }}</a></th>
+          <th class="text-end"><a href="{{ sort_order }}"{% if sort == 'order_id' %} class="{{ order|lower }}"{% endif %}>{{ column_order_id }}</a></th>
           <th><a href="{{ sort_customer }}"{% if sort == 'customer' %} class="{{ order|lower }}"{% endif %}>{{ column_customer }}</a></th>
-          <th><a href="{{ sort_status }}"{% if sort == 's.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 's.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
+          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
