more js moved from template files to js files

--- a/upload/admin/view/template/catalog/attribute_form.twig
+++ b/upload/admin/view/template/catalog/attribute_form.twig
@@ -50,6 +50,7 @@
             </div>
           </div>
           <input type="hidden" name="attribute_id" value="{{ attribute_id }}" id="input-attribute-id"/>
+          <input type="hidden" name="user_token" value="{{ user_token }}" id="input-user-token"/>
         </form>
       </div>
     </div>
