--- a/upload/admin/view/template/catalog/manufacturer_form.twig
+++ b/upload/admin/view/template/catalog/manufacturer_form.twig
@@ -175,9 +175,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('textarea[data-oc-toggle=\'ckeditor\']').ckeditor({
-    language: '{{ ckeditor }}'
-});
-//--></script>
+<script type="text/javascript" src="view/javascript/manufacturer.js"></script>
 {{ footer }}
