--- a/upload/admin/view/template/marketplace/installer_extension.twig
+++ b/upload/admin/view/template/marketplace/installer_extension.twig
@@ -45,7 +45,7 @@
   </table>
 </div>
 <div class="row">
-  <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#list" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
+  <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#extension" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
   <div class="col-sm-6 text-end">{{ results }}</div>
 </div>
 {% for extension in extensions %}
