--- a/upload/admin/view/template/cms/article_form.twig
+++ b/upload/admin/view/template/cms/article_form.twig
@@ -200,9 +200,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('textarea[data-oc-toggle=\'ckeditor\']').ckeditor({
-    language: '{{ ckeditor }}'
-});
-//--></script>
+<script type="text/javascript" src="view/javascript/article.js"></script>
 {{ footer }}
