--- a/upload/admin/view/template/user/api_form.twig
+++ b/upload/admin/view/template/user/api_form.twig
@@ -91,36 +91,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#button-generate').on('click', function() {
-    rand = '';
-
-    string = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-
-    for (i = 0; i < 256; i++) {
-        rand += string[Math.floor(Math.random() * (string.length - 1))];
-    }
-
-    $('#input-key').val(rand);
-});
-
-var ip_row = {{ ip_row }};
-
-$('#button-ip').on('click', function() {
-    html = '<tr id="ip-row-' + ip_row + '">';
-    html += '  <td class="text-end"><input type="text" name="api_ip[]" value="" placeholder="{{ entry_ip|escape('js') }}" class="form-control"/></td>';
-    html += '  <td class="text-end"><button type="button" onclick="$(\'#ip-row-' + ip_row + '\').remove();" data-bs-toggle="tooltip" title="{{ button_remove|escape('js') }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button></td>';
-    html += '</tr>';
-
-    $('#ip tbody').append(html);
-
-    ip_row++;
-});
-
-$('#history').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#history').load(this.href);
-});
-//--></script>
+<script type="text/javascript" src="view/javascript/api.js"></script>
 {{ footer }}
