--- a/upload/catalog/view/template/common/header.twig
+++ b/upload/catalog/view/template/common/header.twig
@@ -12,6 +12,8 @@
     <meta name="keywords" content="{{ keywords }}"/>
   {% endif %}
   <link href="{{ stylesheet }}" type="text/css" rel="stylesheet"/>
+  <script src="{{ jquery }}" type="text/javascript"></script>
+  <script src="{{ bootstrap }}" type="text/javascript"></script>
   {% if icon %}
     <link rel="icon" href="{{ icon }}" type="image/png">
   {% endif %}
