--- a/upload/catalog/view/template/account/tracking.twig
+++ b/upload/catalog/view/template/account/tracking.twig
@@ -32,7 +32,9 @@
         </div>
       </form>
       <div class="text-end"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ content_bottom }}
+    </div>
+    {{ column_right }}
+  </div>
 </div>
 {{ footer }}
