--- a/upload/catalog/view/template/account/login.twig
+++ b/upload/catalog/view/template/account/login.twig
@@ -28,7 +28,7 @@
         </div>
         <div class="col mb-3">
           <div class="border rounded p-3 d-flex flex-column h-100">
-            <form id="form-login" action="{{ login }}" method="post">
+            <form id="form-login" action="{{ login }}">
               <h2>{{ text_returning_customer }}</h2>
               <p><strong>{{ text_i_am_returning_customer }}</strong></p>
               <div class="mb-3">
